--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -93,7 +93,7 @@ template(name='user_card')
                 .header #{first_name} #{last_name} 
                 .meta @#{username}
                 +user_email
-                +emails_edit    
+                //- +emails_edit    
         //- +user_status user
 
 
