--- a/client/client.jade
+++ b/client/client.jade
@@ -45,4 +45,4 @@ template(name='layout')
 
 template(name='not_found')
     .ui.text.container
-        .ui.center.aligned.header Not Found
+        .ui.center.aligned.header not found
