--- a/client/fields.jade
+++ b/client/fields.jade
@@ -112,7 +112,7 @@ template(name='image_view')
     else
         |#{this}
     
-    img.ui.large.centered.rounded.image(src="{{c.url field_value gravity='face' crop='fill'}}")
+    img.ui.medium.centered.rounded.image(src="{{c.url field_value gravity='face' crop='crop'}}")
     //- +call_visual
 
 template(name='image_edit')
@@ -852,48 +852,47 @@ template(name='single_person_edit')
 
 
 template(name='multi_user_edit')
-    .ui.segment
-        .ui.form
-            .ui.small.inline.grey.header
-                if icon
-                    i.grey.icon(class=icon)
-                if title
-                    |#{title}
-                else if label
-                    |#{label}
-                else if key
-                    |#{key}
-                else
-                    |#{this}
-                input#multi_user_select_input(type='text' placeholder='lookup user...')
-                each selections
-                    .ui.large.label
-                        |#{username} #{first_name} #{last_name}
-            if user_results
-                .ui.top.attached.segment
-                    .ui.middle.aligned.selection.animated.list
-                        each user_results
-                            .select_user.item
-                                h5.ui.header
-                                    img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
-                                    strong #{first_name} #{last_name}
-                                    small #{username}
-            +clear_value                
-            .ui.list
-                each field_value
-                    // |#{this}
-                    +big_user_card
-                    //- with user_from_id
-                    //-     .item
-                    //-         .right.floated.content
-                    //-             i.pull_user.remove.link.icon
-                    //-         .image
-                    //-             img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
-                    //-         .content
-                    //-             h4.ui.header
-                    //-                 |#{first_name} #{last_name}
-                    //-                 small @#{username}
-    
+    .ui.form
+        .ui.small.inline.grey.header
+            if icon
+                i.grey.icon(class=icon)
+            if title
+                |#{title}
+            else if label
+                |#{label}
+            else if key
+                |#{key}
+            else
+                |#{this}
+            input#multi_user_select_input(type='text' placeholder='lookup user...')
+            each selections
+                .ui.large.label
+                    |#{username} #{first_name} #{last_name}
+        if user_results
+            .ui.top.attached.segment
+                .ui.middle.aligned.selection.animated.list
+                    each user_results
+                        .select_user.item
+                            h5.ui.header
+                                img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                                strong #{first_name} #{last_name}
+                                small #{username}
+        +clear_value                
+        .ui.list
+            each field_value
+                // |#{this}
+                +user_card
+                //- with user_from_id
+                //-     .item
+                //-         .right.floated.content
+                //-             i.pull_user.remove.link.icon
+                //-         .image
+                //-             img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                //-         .content
+                //-             h4.ui.header
+                //-                 |#{first_name} #{last_name}
+                //-                 small @#{username}
+
 template(name='multi_user_view')
     .ui.small.header 
         |#{title}
