--- a/client/healthclub.jade
+++ b/client/healthclub.jade
@@ -249,14 +249,20 @@ template(name='checkin_card')
                     +rules_and_regs_check
                 div
                 +checkin_guest
-            .ui.fluid.green.big.button.circular.complete_checkin
-                |complete check in
-                i.right.chevron.icon
+            .row
+                .two.wide.column
+                    .ui.fluid.red.big.button.icon.circular.cancel_checkin
+                        i.ban.icon
+                .fourteen.wide.column
+                    .ui.fluid.green.big.button.circular.complete_checkin
+                        |complete check in
+                        i.right.chevron.icon
                 
 
 template(name='checkin_guest')                
-    .ui.big.circular.button.checkin_guest
-        i.user.plus.icon
+    .ui.big.circular.compact.button.checkin_guest(class="{{#if $.Session.get 'checking_in_guest'}} blue {{else}} basic {{/if}}")
+        //- i.user.plus.icon
+        +i name='badge' classes='ui inline image'
         |check in guest
     if checking_in_guest
         .ui.header last guest
@@ -267,6 +273,6 @@ template(name='checkin_guest')
             .ui.small.inline.header #{first_name} #{last_name}
         .ui.header select other 
         with checking_in_doc    
-            +multi_user_edit key='guests' ref_model='guest' direct=true
+            +multi_user_edit key='guests' role_filter='guest' direct=true
         
             
