add_button working for staff dashboard, username_query for users template, future sections in staff

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -214,8 +214,8 @@ template(name='remove_button')
         //- |Delete
 
 template(name='add_button')
-    a.ui.button.add(title='Add')
-        i.plus.icon tooltip="add #{model}"
+    a.ui.large.basic.circular.button.add(title="Add #{model}")
+        i.plus.icon
         |#{model}
 
 
