--- a/client/staff.jade
+++ b/client/staff.jade
@@ -2,12 +2,25 @@ template(name='staff')
     h1.ui.center.aligned.grey.header 
         +i name='user shield'
         |staff
+    .ui.header current health club checked in
+    each active_healthclub_sessions
+        .ui.header this
+    .ui.header current court keys checked out
+    each court_key_sessions
+        .ui.header this
+    .ui.header checklist reminders
+    each court_key_sessions
+        .ui.header this
+    .ui.header notes/work orders
+    +add_button model='work_order'
+    .ui.header communication log
+    +add_button model='communication'
+    //- +model_docs_crud model='communication'
+    
+    
     +schedule
     +shift_change_requests
     +view_chats
-
-
-
 
 
 
