--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,9 +6,10 @@ template(name='nav')
             .icon.item
                 i.large.grey.loading.notched.circle.icon
         else
-            a.header.icon.item(href='/' class="{{isActivePath '/'}}" title='home')
-                //- i.grey.home.large.icon
-                +i name='home-page'    
+            if is_dev
+                a.header.icon.item(href='/' class="{{isActivePath '/'}}" title='home')
+                    //- i.grey.home.large.icon
+                    +i name='home-page'    
             if is_staff
                 a.icon.item(href='/staff' class="{{isActivePath '/staff'}}" title='staff')
                     //- i.grey.user.shield.large.icon
@@ -16,13 +17,16 @@ template(name='nav')
                 a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='users')
                     //- i.large.grey.users.icon
                     +i name='groups'
+            a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
+                +i name='shop'
             //- each bookmarked_models
             //-     a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
             //-         i.large.icon(class=icon)
-                    //- |#{title}
-            a.icon.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='health club')
-                //- i.large.grey.clinic.medical.icon
-                +i name='treadmill'    
+            //-         |#{title}
+            if is_frontdesk
+                a.icon.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='health club')
+                    //- i.large.grey.clinic.medical.icon
+                    +i name='treadmill'    
         .right.menu
             if currentUser
                 unless logging_out
@@ -35,13 +39,15 @@ template(name='nav')
                         a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
                             +i name='new-post'
                             //- i.large.grey.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
+                    if is_staff
                         a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
                             +i name='filled-topic'
                     if is_admin
                         a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
                             +i name='user shield'
-                    a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
-                        +i name='active directory'
+                    if is_dev
+                        a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
+                            +i name='active directory'
                     //- if is_dev
                     a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
                         if currentUser.image_id
@@ -51,7 +57,7 @@ template(name='nav')
                         //- | #{currentUser.username}
                 if logging_out
                     .item
-                        i.large.grey.loading.refresh.icon
+                        i.large.grey.loading.circle.notch.icon
                 else
                     a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
                         i.sign.out.large.grey.icon
