--- a/client/profile.jade
+++ b/client/profile.jade
@@ -36,29 +36,32 @@ template(name='profile')
                     .ui.profile_block.segment
                         //- +text_view key='first_name' label='First Name' direct=true
                         //- +text_view key='last_name' label='Last Name' direct=true
-                        +text_view key='address' label='address' direct=true
+                        if is_admin
+                            +text_view key='address' label='address' direct=true
                         //- +text_view key='email' label='Email' direct=true
                         +phone_view key='phone' label='phone' direct=true
                         if user_is_resident
-                            +number_view key='unit_number' label='unit #' direct=true
-                            +number_view key='building_number' label='building #' direct=true
-                            +text_view key='building_code' label='building code' direct=true
-                            +date_view key='start_date' label='start date' direct=true
-                            +date_view key='expiration_date' label='expiration date' direct=true
+                            if is_staff
+                                +number_view key='unit_number' label='unit #' direct=true
+                                +number_view key='building_number' label='building #' direct=true
+                                +text_view key='building_code' label='building code' direct=true
+                                +date_view key='start_date' label='start date' direct=true
+                                +date_view key='expiration_date' label='expiration date' direct=true
                         //- +textarea_view key='bio' label='Bio' collection='users' icon='align-left'
                         each emails
                             .ui.circular.basic.label #{address}
-                    .ui.profile_block.segment
-                        .ui.grey.header 
-                            +i name='user shield'
-                            |roles
-                        each roles
-                            .ui.circular.basic.label #{this}                    
+                    if is_admin
+                        .ui.profile_block.segment
+                            .ui.grey.header 
+                                +i name='user shield'
+                                |roles
+                            each roles
+                                .ui.circular.basic.label #{this}                    
                     if user_is_staff
                         +user_notes
                         +user_tasks
 
-                .four.wide.column
+                .twelve.wide.column
                     if user_is_resident
                         +user_messages
                 
@@ -73,26 +76,26 @@ template(name='profile')
                         //-     +user_following
                         //-     +follow_user
     
-                .four.wide.column
-                    +user_log
-                    +membership_status
-                    if user_is_resident
-                        if is_resient
-                            +user_karma
-                            +user_bookmarks    
-                            +user_feed
-                .four.wide.column
-                    if user_is_resident
-                        +user_key
-                        //- +user_garden
-                        +user_unit
-                        +user_tags
-                        +user_connections
-                    //- +user_rules_widget
-                    //- if is_eric
-                    //-     +role_switcher
-                    //- if current_user
-            
+                //- .eight.wide.column
+                //-     if user_is_resident
+                //-         if is_admin
+                //-             +user_log
+                //-             +membership_status
+                //-             +user_karma
+                //-             +user_bookmarks    
+                //-             +user_feed
+                //-     if user_is_resident
+                //-         if is_staff
+                //-             +user_key
+                //-             //- +user_garden
+                //-             +user_unit
+                //-             +user_tags
+                //-             +user_connections
+                //-     //- +user_rules_widget
+                //-     //- if is_eric
+                //-     //-     +role_switcher
+                //-     //- if current_user
+                //- 
             
 template(name='user_card_replacements')
     .ui.segment.profile_block
