--- a/client/nav.jade
+++ b/client/nav.jade
@@ -19,6 +19,8 @@ template(name='nav')
                     +i name='groups'
             a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
                 +i name='shop'
+            a.item.set_post(href='/m/post' class="{{isActivePath '/m/post'}}")
+                +i name='blog'
             //- each bookmarked_models
             //-     a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
             //-         i.large.icon(class=icon)
