--- a/client/nav.jade
+++ b/client/nav.jade
@@ -138,6 +138,17 @@ template(name='footer')
     .ui.fluid.secondary.attached.segment.footer
         .ui.container.stackable.grid
             .eight.wide.column
+                form(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
+                    input(type='hidden', name='cmd', value='_s-xclick')
+                    input(type='hidden', name='hosted_button_id', value='AUVHGYNUW5LVE')
+                    <input type="hidden" name="hosted_button_id" value="7SENHECABERS6" />
+                    // input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif', border='0', name='submit')
+                    //- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                    img(alt='', border='0', src='https://www.paypal.com/en_US/i/scr/pixel.gif', width='1', height='1')
+                    button.ui.large.circular.icon.basic.button(type='submit')
+                        //- i.pied.piper.alternate.large.icon
+                        |donate
+                
                 //- +health_club_info
                 if is_eric    
                     with current_user
