--- a/client/users.jade
+++ b/client/users.jade
@@ -135,8 +135,7 @@ template(name='users')
                     +i name='groups'
                     |users
                 .ui.left.icon.huge.fluid.input
-                    input.username_search(type='text' placeholder='lookup resident name...')
-        
+                    input.username_search(type='text' placeholder='lookup name...')
                 .ui.centered.cards
                     each users
                         +user
