--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -13,8 +13,8 @@ template(name='comments')
                     .header #{body}
                     .meta #{when}
                     .actions
-                        i.thumbs.up.link.icon
-                        i.remove.link.remove_comment.icon
+                        +voting
+                        +remove_button
 
 
 template(name='goto_model')
